# GSAC

./: .gitignore  PropertySheetDebugx64_2412.props  PropertySheetReleasex64_2412.props  README.md
Detector/: CMakeLists.txt  CMakeLists_howto.txt  Detector.cpp  Detector.h  Detector.sln  Detector.vcxproj  Detector.vcxproj.filters  Processor.cpp  Processor.h  frameProcessor.h  license.txt  main.cpp
Detector/haar_source/: features.cpp  haarfeatures.cpp  haarfeatures.h  imagestorage.h
Other files/: run_Detector.bat  run_SVM_trainer.bat
SVM_training/: CMakeLists.txt  SVM_training.rc  SVM_training.sln  SVM_training.vcxproj  SVM_training.vcxproj.filters  SVM_training_main.cpp
SVM_training/haar_source/: haarfeatures.cpp  traincascade_features.h
